# MyModBus

./: CMakeLists.txt  DataBase.cpp  EnumHelper.h  FMeter_Clb_ru_RU.ts  Flowmeter.pro  MyModBus .pro  README.md  flowmeter.cpp  flowmeter.h  flowmeter.ui  interface.cpp  interface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelinputdiscrete.cpp  modelinputdiscrete.h  modelinputregisters.cpp  modelinputregisters.h  reg_data.cpp  reg_data.h  regitemdelegate.cpp  regitemdelegate.h  regmodel.cpp  regmodel.h  timer.h
coils/: coils_model.cpp  coils_model.h
discreteinputs/: di_model.cpp  di_model.h
holdingregisters/: hldreg_data.cpp  hldreg_data.h  hldreg_delegate.cpp  hldreg_delegate.h  hldreg_model.cpp  hldreg_model.h
inputregisters/: inreg_data.cpp  inreg_data.h  inreg_delegate.cpp  inreg_delegate.h  inreg_model.cpp  inreg_model.h
libmodbus/: help.txt  libmodbus.cpp  libmodbus.h  libmodbus.pri  modbusutility.cpp  modbusutility.h  mymodbus.cpp  mymodbus.h
libmodbus/doc/: modbus_close.txt  modbus_connect.txt  modbus_mapping_new.txt  modbus_mapping_new_start_address.txt  modbus_new_rtu.txt  modbus_new_tcp.txt  modbus_new_tcp_pi.txt  modbus_read_registers.txt  modbus_rtu_set_rts.txt  modbus_send_raw_request.txt  modbus_set_slave.txt  modbus_strerror.txt
libmodbus/src/: modbus-data.c  modbus-rtu.c  modbus.h
libmodbus/tests/: bandwidth-client.c  bandwidth-server-many-up.c  bandwidth-server-one.c  random-test-client.c  random-test-server.c  unit-test-client.c  unit-test-server.c
qml/: HomeForm.qml  main.qml  qml.qrc
xrmodbus/: CMakeLists.txt  xr_modbus.cpp  xr_modbus.h  xr_modbusutility.cpp  xr_modbusutility.h  xrmodbus.pri
